# vector

./: .gitignore  Cargo.toml  Makefile  README.md  apt.txt
src/: server.rs
static/: css.css  index.html
